<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="ques_amount_example">10</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">Start</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_category">Category:</string>
    <string name="mixed">Mixed</string>
    <string name="history">History</string>
    <string name="question_type_title">Football</string>
    <string name="questions_answers_amount">5/10</string>
    <string name="skip">Skip</string>
    <string name="version">v 1.0.0</string>
    <string name="settings_title">Settings</string>
    <string name="result">Result</string>
    <string name="correct_answers">Correct answers:</string>
    <string name="_8_10">8/10</string>
    <string name="_difficulty">Difficulty:</string>
    <string name="all">All</string>
    <string name="the_date">12 may 2019 20:32</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="clear_history">Clear history</string>
    <string name="_result">Result:</string>
    <string name="finish">Finish</string>

    <string-array name="spinner_category_example">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>