<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/history_item_card_view"
        android:layout_width="370dp"
        android:layout_height="100dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/category_tv"
                style="@style/category_style"
                android:text="@string/_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/category_var"
                style="@style/category_style"
                android:text="@string/mixed"
                app:layout_constraintStart_toEndOf="@id/category_tv"
                app:layout_constraintTop_toTopOf="@id/category_tv" />

            <View
                android:layout_width="30dp"
                android:layout_height="22dp"
                android:background="@drawable/ic_triple_dots"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/correct_answers_tv"
                style="@style/parameters_style"
                android:layout_marginTop="10dp"
                android:text="@string/correct_answers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_tv" />

            <TextView
                android:id="@+id/correct_answers_var"
                style="@style/parameters_style"
                android:text="@string/_8_10"
                app:layout_constraintStart_toEndOf="@id/correct_answers_tv"
                app:layout_constraintTop_toTopOf="@id/correct_answers_tv" />

            <TextView
                android:id="@+id/difficulty_tv"
                style="@style/parameters_style"
                android:layout_marginTop="10dp"
                android:text="@string/_difficulty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/correct_answers_tv" />

            <TextView
                android:id="@+id/difficulty_var"
                style="@style/parameters_style"
                android:text="@string/all"
                app:layout_constraintStart_toEndOf="@id/difficulty_tv"
                app:layout_constraintTop_toTopOf="@id/difficulty_tv" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="9sp"
                android:text="@string/the_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>