<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="result"
            type="com.azamzhon.data.models.QuizResult" />
        
        <variable
            name="viewModel"
            type="com.azamzhon.ui.result.ResultViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.result.ResultActivity">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/result"
            android:textColor="#1A051D"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewTick"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/ic_tick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="200dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_cat"
                    style="@style/result_category_style"
                    android:text="@string/_category"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_var"
                    style="@style/result_category_style"
                    android:layout_width="0dp"
                    android:text="@{result.category}"
                    android:layout_marginEnd="40dp"
                    app:layout_constraintStart_toEndOf="@id/text_view_cat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_view_cat" />

                <TextView
                    android:id="@+id/text_1"
                    style="@style/result_tvs_style"
                    android:text="@string/_difficulty"
                    app:layout_constraintEnd_toStartOf="@id/text_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_2" />

                <TextView
                    android:id="@+id/text_2"
                    style="@style/result_tvs_style"
                    android:layout_marginTop="90dp"
                    android:text="@string/correct_answers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_3"
                    style="@style/result_tvs_style"
                    android:text="@string/_result"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_2"
                    app:layout_constraintTop_toTopOf="@id/text_2" />

                <TextView
                    android:id="@+id/text_4"
                    style="@style/result_tvs_style"
                    android:text="@{result.difficulty}"
                    app:layout_constraintEnd_toEndOf="@id/text_1"
                    app:layout_constraintStart_toStartOf="@id/text_1"
                    app:layout_constraintTop_toTopOf="@id/text_5" />

                <TextView
                    android:id="@+id/text_5"
                    style="@style/result_tvs_style"
                    android:text="@{String.valueOf(result.correctAnswers) + '/' + String.valueOf(result.size)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_2" />

                <TextView
                    android:id="@+id/text_6"
                    style="@style/result_tvs_style"
                    android:text="@{viewModel.percentF}"
                    app:layout_constraintEnd_toEndOf="@id/text_3"
                    app:layout_constraintStart_toStartOf="@id/text_3"
                    app:layout_constraintTop_toTopOf="@id/text_5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginBottom="124dp"
            android:background="@drawable/ic_finish_back"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
